# james_works

./: .gitignore
codes/python/ver-3.7/appium/: run.py  urls.txt  win_automation.py
codes/python/ver-3.7/study-projects/: user.py
codes/rust/ver-1.x/hello_cargo/: .gitignore  Cargo.toml
codes/rust/ver-1.x/hello_cargo/adder/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/adder/src/: lib.rs
codes/rust/ver-1.x/hello_cargo/advances/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/advances/src/: lib.rs
codes/rust/ver-1.x/hello_cargo/boxs_rc/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/boxs_rc/src/: lib.rs
codes/rust/ver-1.x/hello_cargo/lifetimes/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/lifetimes/src/: lib.rs
codes/rust/ver-1.x/hello_cargo/methods_lib/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/methods_lib/src/: lib.rs
codes/rust/ver-1.x/hello_cargo/parallel_helper/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/parallel_helper/src/: lib.rs
codes/rust/ver-1.x/hello_cargo/patterns/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/patterns/src/: lib.rs
codes/rust/ver-1.x/hello_cargo/src/: main.rs
codes/rust/ver-1.x/hello_cargo/src/libs/: commuicator.rs  error.rs  mod.rs
codes/rust/ver-1.x/hello_cargo/tests/: integration_test.rs
codes/rust/ver-1.x/hello_cargo/webserver/: Cargo.toml
codes/rust/ver-1.x/hello_cargo/webserver/src/: lib.rs
pmp/: ~WRL0005.tmp  项目章程相关知识点笔记.docx
pmp/example/: James-Docs.7z  绩效数据收集困难的原因及对策之一.txt  软件开发.mpp  预算处理.mpp
pmp/template/: PROJECT-CHARTER-TEMPLATE.docx
resume/: 1-chinese.txt  1-english.txt  2-english.txt
(+15 files in other folders)
