[package]
name = "hello_cargo"
version = "0.1.0"
license = "Apache-2.0"
authors = ["iansun <lauer3912@gmail.com>"]
repository = ""
description = "Some codes for building and studying Rust"


[workspace]
members = [
    "adder",
    "boxs_rc",
    "lifetimes",
    "parallel_helper",
    "patterns",
    "webserver",
    "advances",
    "methods_lib"
]

[dependencies]
rand = "0.6.0"
debug_panic = "0.1.2"
adder = { path = "adder" }
boxs_rc = { path = "boxs_rc" }
lifetimes = { path = "lifetimes" }
parallel_helper = { path = "parallel_helper" }
patterns = { path = "patterns"}
webserver = { path = "webserver" }
advances = { path = "advances" }
methods_lib = { path = "methods_lib"}
